# HOLOS

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
FileTest/: CMakeLists.txt  FAME.TXT  FileTest.sln  FileTest.vcxproj  FileTest.vcxproj.filters  README.md  README_en.md  hall_of_fame.cpp  read_ints.c  write_ints.c  write_string.cpp
MemoryTest/: README.md  README_cat.md
MemoryTest/1_matrix/: CMakeLists.txt  measure.c  sampler.h
MemoryTest/2_access_pattern/: CMakeLists.txt  mm-ijk.c  mm-jki.c  mm-kij.c  sampler.h
MemoryTest/3_dynamic_memory/: CMakeLists.txt  mem.c  mem2.c
MemoryTest/MemoryTests/: MemoryTests.sln  MemoryTests.vcxproj  MemoryTests.vcxproj.filters
MemoryTest/MemoryTests/1_matrix/: Makefile  matriu.c  measure.h  sampler.c
MemoryTest/MemoryTests/2_access_pattern/: Makefile  measure.c  measure.h  mm-ijk2.c  mm-kij.c  sampler.c
MemoryTest/MemoryTests/3_dynamic_memory/: Makefile
MemoryTest/MemoryTests/Debug/: MemoryTests.exe.recipe  MemoryTests.ilk  MemoryTests.vcxproj.FileListAbsolute.txt  vc142.idb
MemoryTest/MemoryTests/Debug/MemoryTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MemoryTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ProcessTest/: ProcessTest.sln  ProcessTest.vcxproj  ProcessTest.vcxproj.filters
ProcessTest/1_rectangle/: CMakeLists.txt  ParallelRectangle.cpp  SingleRectangle.cpp
ProcessTest/2_shared/: CMakeLists.txt  shared_inc.cpp  shared_inc_safe.cpp
ProcessTest/Debug/: ProcessTest.exe.recipe  ProcessTest.ilk  ProcessTest.vcxproj.FileListAbsolute.txt  vc142.idb
ProcessTest/Debug/ProcessTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProcessTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
